[package]
name = "resonance"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk-macros = "0.3"
gtk4-macros = "0.6.0"
serde_json = { version = "1.0.90", package = "serde_json" }
serde = { version = "1.0.158", features = ["derive"] }
rusqlite = { version = "0.28.0", features = ["chrono"] }
html-escape = "0.2.12"
once_cell = "1.10"
log = "0.4"
rand = "0.8.5"
color-thief = "0.2.1"
pretty_env_logger = "0.4"
directories-next = "2.0.0"
xdg = "2.4.1"
chrono = "0.4.24"
regex = "1.7.3"
mpris-player = "0.6"
fuzzy-matcher = "0.3.7"
discord-rich-presence = "0.2.3"
reqwest = { version = "0.11.15", features = ["blocking", "json"] }
scraper = "0.15.0"
urlencoding = "2.1.2"
rustfm-scrobble = "1.1.1"
open = "4.0.1"
md5 = "0.7.0"

[dependencies.gtk]
package = "gtk4"
version  = "0.6.4"
features = ["v4_8"]

[dependencies.adw]
package = "libadwaita"
version = "0.3.1"
features = ["v1_2"]

[dependencies.gst]
package = "gstreamer"
version = "0.20.2"

[dependencies.gst-audio]
package = "gstreamer-audio"
version = "0.19"

[dependencies.pyo3]
version = "0.17.3"
features = ["auto-initialize"]