subdir('dialog')
subdir('pages')
subdir('art')

rust_sources += files(
    'window.rs',
    'preferences_window.rs',
    'generic_flowbox_child.rs',
    'disc_button.rs',
    'track_entry.rs',
    'example_page.rs',
    'album_card.rs',
    'control_bar.rs',
    'scale.rs',
    'volume_scale.rs',
    'volume_widget.rs',
    'mod.rs',
)