rust_sources += files(
    'mod.rs',
    'alpha_dialog.rs',
    'save_playlist_dialog.rs',
    'add_tracks_to_playlist_dialog.rs',
    'delete_playlist_dialog.rs',
    'duplicate_playlist_dialog.rs',
    'rename_playlist_dialog.rs',
    'remove_directory_dialog.rs',
    'confirm_rename_playlist_dialog.rs'
)
